name:                zeroset
version:             0.1.0.0
synopsis:            Ipelet to compute the zeroset of a curve
-- description:
homepage:            https://github.com/noinia/zeroset#readme
license:             BSD3
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
copyright:           2020 Frank Staals
category:            Geometry
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options: -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults

  exposed-modules: ZeroSet.Main
  hs-source-dirs:      src

  build-depends:
                       base             >= 4.11      &&     < 5
                     , bifunctors       >= 4.1
                     , containers       >= 0.5.5
                     , lens             >= 4.2

                     , hgeometry-combinatorial >= 0.10.0.0
                     , hgeometry               >= 0.10.0.0
                     , hgeometry-ipe           >= 0.10.0.0
                     , optparse-applicative    >= 0.13.0.0


  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables


                    , PatternSynonyms
                    , ViewPatterns
                    , LambdaCase
                    , TupleSections


                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , AutoDeriveTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , OverloadedStrings



executable zeroset
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , zeroset
                     , optparse-applicative
